# AISdb-lite

./: .gitignore  Cargo.toml  README  README.md  SECURITY.md  pyproject.toml
.github/workflows/: API_doc_manual.yml  CI.yml  Install.yml
aisdb/: __init__.py  denoising_encoder.py  network_graph.py  proc_util.py  receiver.py  track_gen.py
aisdb/aisdb_sql/: timescale_createtable_dynamic.sql  timescale_createtable_static.sql
aisdb/database/: create_tables.py  dbconn.py  dbqry.py  decoder.py  decoder_csv.py  sql_query_strings.py  sqlfcn.py  sqlfcn_callbacks.py
aisdb/ports/: api.py
aisdb/tests/: create_testing_data.py  test_001_postgres.py  test_001_postgres_global.py  test_002_decode_global.py  test_004_sqlfcn_postgres.py  test_013_proc_util.py  test_019_ports_api.py  test_brin_optimization.py
aisdb/webdata/: _scraper.py  bathymetry.py  shore_dist.py
aisdb_lib/: Cargo.toml
aisdb_lib/src/: csvreader.rs  db.rs  decode.rs
aisdb_web/: package-lock.json  package.json
audit/: .audit_checkpoint  0-CHANGELOG.md  0-REPORT.md  1-CHANGELOG.md  1-REPORT.md  2-CHANGELOG.md  2-REPORT.md  3-CHANGELOG.md  3-PROMPT.md  3-REPORT.md  4-CHANGELOG.md  4-PROMPT.md  4-REPORT.md  run_audit.sh
client_webassembly/: Cargo.toml
database_server/: Cargo.toml
docs/: BRIN_INDEX_MIGRATION.md  build_docs.sh  package-lock.json
docs/source/: conf.py
examples/: get_ports.ipynb  query_db_API.py
receiver/: Cargo.toml
receiver/src/: receiver.rs
scripts/benchmarks/: parallel_workers_2weeks.sh
src/: lib.rs
