[package]
name = "aisdb"
edition = "2021"
version = "1.8.0-alpha"
include = [
    "aisdb/*.py", "aisdb/aisdb_sql", "aisdb/database/*.py", "aisdb/webdata/*.py", "/src", "pyproject.toml",
]

[lib]
crate-type = [ "cdylib", "rlib", ]
path = "src/lib.rs"

[dependencies]
geo = "0.26"
geo-types = "*"
nmea-parser = "0.10"
sysinfo = "0.29"

[dependencies.futures]
version = "0.3"
features = [ "executor", "thread-pool",]

[dependencies.aisdb-lib]
path = "aisdb_lib"
features = [ "sqlite", "postgres",]

[dependencies.aisdb-receiver]
path = "receiver"

[dependencies.pyo3]
version = "0.18.3"
features = [ "extension-module", "generate-import-lib",]
