[build-system]
requires = ["maturin>=1.0", "numpy", "wheel", "patchelf"]
build-backend = "maturin"

[project]
name = "aisdb"
requires-python = ">=3.8"
requires-dist = ["maturin>=1.0", "numpy", "wheel"]
dependencies = [
    "numpy", "psycopg[binary]", "pyproj", "python-dateutil",
    "scipy", "shapely", "toml",
]
zip-safe = false
version = "1.8.0-alpha"
readme = "README.md"
description = "Smart AIS data storage and integration"
classifiers = [
    "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis", "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS", "Intended Audience :: Developers", "Intended Audience :: Science/Research",
    "Programming Language :: SQL", "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Database :: Database Engines/Servers",
    "Programming Language :: Python :: 3.10", "Programming Language :: Rust"
]

[[project.authors]]
email = "aisviz@dal.ca"
name = "AISViz Maintainers"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://aisviz.cs.dal.ca/"
repository = "https://github.com/AISViz/AISdb-lite"
tutorials = "https://aisviz.gitbook.io/tutorials/"
documentation = "https://aisviz.gitbook.io/documentation/"

[project.optional-dependencies]
# feature extras matching the lazily-loaded modules in aisdb/__init__.py
scraping = ["selenium", "webdriver-manager", "beautifulsoup4", "requests"]
weather = ["xarray", "cfgrib", "cdsapi"]
discretize = ["h3", "matplotlib", "geopandas"]
rasters = ["pillow", "py7zr", "requests", "tqdm"]
ports = ["pandas", "requests"]
all = ["aisdb[scraping,weather,discretize,rasters,ports]"]
test = ["coverage", "pytest", "pytest-cov", "pytest-dotenv", "aisdb[all]"]
docs = ["sphinx", "sphinx-rtd-theme"]
devel = []

[tool.maturin]
include = [
    "pyproject.toml", "aisdb/*.py", "aisdb/aisdb_sql/*.sql", "aisdb/database/*.py", "aisdb/tests/*.py",
    "aisdb_lib/*",
    "aisdb/tests/testdata/test_data_20210701.csv", "aisdb/tests/testdata/test_data_20211101.nm4", "aisdb/webdata/*.py",
]
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["aisdb/tests"]
addopts = "--color=yes --cov-report term --cov-report html:docs/dist_coverage --cov=aisdb --cov=examples --doctest-modules --envfile .env"
