[build-system]
requires = ["maturin>=1.0", "numpy", "wheel", "patchelf"]
build-backend = "maturin"

[project]
name = "aisdb"
requires-python = ">=3.8"
requires-dist = ["maturin>=1.0", "numpy", "wheel"]
dependencies = [
    "numpy", "psycopg[binary]", "pyproj", "python-dateutil",
    "scipy", "shapely",
]
zip-safe = false
version = "1.8.0-alpha"
readme = "README.md"
description = "Lightweight smart AIS data storage and integration"
classifiers = [
    "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis", "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS", "Intended Audience :: Developers", "Intended Audience :: Science/Research",
    "Programming Language :: SQL", "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Database :: Database Engines/Servers",
    "Programming Language :: Python :: 3.10", "Programming Language :: Rust"
]

[[project.authors]]
email = "mapslab@dal.ca"
name = "AISViz Maintainers"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://aisviz.cs.dal.ca/"
repository = "https://github.com/MAPS-Lab/AISdb-lite"
tutorials = "https://aisviz.gitbook.io/tutorials/"
documentation = "https://aisviz.gitbook.io/documentation/"

[project.optional-dependencies]
# feature extras matching the lazily-loaded modules in aisdb/__init__.py.
# NOTE: lists are expanded rather than self-referencing "aisdb[...]" because
# pip resolves a self-reference against PyPI (pulling the unrelated aisdb
# 1.7.x release) instead of the package being installed.
scraping = ["selenium", "webdriver-manager", "beautifulsoup4", "requests"]
weather = ["xarray", "cfgrib", "cdsapi"]
discretize = ["h3", "matplotlib", "geopandas"]
rasters = ["pillow", "py7zr", "requests", "tqdm"]
ports = ["pandas", "requests"]
all = [
    "selenium", "webdriver-manager", "beautifulsoup4", "requests",
    "xarray", "cfgrib", "cdsapi",
    "h3", "matplotlib", "geopandas",
    "pillow", "py7zr", "tqdm", "pandas",
]
test = [
    "coverage", "pytest", "pytest-cov", "pytest-dotenv",
    "selenium", "webdriver-manager", "beautifulsoup4", "requests",
    "xarray", "cfgrib", "cdsapi",
    "h3", "matplotlib", "geopandas",
    "pillow", "py7zr", "tqdm", "pandas",
]
docs = ["sphinx", "sphinx-rtd-theme"]
devel = []

[tool.maturin]
include = [
    "aisdb/*.py", "aisdb/aisdb_sql/*.sql",
    "aisdb/database/*.py", "aisdb/webdata/*.py", "aisdb/weather/*",
    "aisdb/discretize/*.py", "aisdb/ports/*.py",
    "aisdb_lib/*", "receiver/*",
]
exclude = ["aisdb/tests/**"]
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["aisdb/tests"]
addopts = "--color=yes --cov-report term --cov-report html:docs/dist_coverage --cov=aisdb --cov=examples --doctest-modules --envfile .env"
