[package]
name = "aisdb-db-server"
version = "1.8.0-alpha"
edition = "2021"
authors = [ "AISViz Maintainers // aisviz@dal.ca",]
description = "AISdb database server"
homepage = "https://aisviz.cs.dal.ca/"
repository = "https://github.com/AISViz/AISdb-lite"
license-file = "../LICENSE"

[lib]
name = 'aisdb_db_server'
path = 'src/lib.rs'

[[bin]]
name = 'aisdb-db-server'
path = 'src/main.rs'

[dependencies]
aisdb-lib = {path = "../aisdb_lib", features=["postgres"]}

#deflate = { version = "1.0"}
#lz4_flex = "0.10"
#serde_json = { version = "1", features = ["float_roundtrip"]}
chrono = "0.4"
geo-types = "*"
geojson = "*"
geo = "0.26"
flate2 = {version = "1.0", features = ["zlib"]}
postgres = { version = "0.19", features=["with-serde_json-1"]}
serde= { version = "1", features = ["derive"] }
serde_json = { version = "1"}
tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"]}
